--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "lint:js": "run-s lint:js:**",
     "lint:js:biome": "biome check --apply \"./\"",
     "lint:js:tsc": "tsc --noEmit",
-    "start": "next start"
+    "start": "next start",
+     "install": "bun install"
   
   },
   "lint-staged": {
